--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 
 services:
-  reverseproxy:
+  battleship:
+    container_name: battleship
     image: reverseproxy
     build:
       context: .
