--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,11 @@ http {
 
     sendfile on;
 
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     upstream auth {
         server battleship_auth:3333;
     }
@@ -55,8 +60,16 @@ http {
             proxy_set_header   X-Forwarded-Host $server_name;
         }
 
-        location /api/updater/ {
-            proxy_pass         http://updater/;
+        location /api/updater/ws {
+            proxy_pass         http://updater/ws/;
+            proxy_http_version 1.1;
+            proxy_set_header   Upgrade $http_upgrade;
+            proxy_set_header   Connection $connection_upgrade;
+            proxy_set_header   Host $host;
+        }
+
+        location /api/updater/update {
+            proxy_pass         http://updater/update/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
