--- a/nginx.conf
+++ b/nginx.conf
@@ -34,16 +34,7 @@ http {
         listen 9999;
 
         location /api/auth/ {
-            proxy_pass         http://auth/auth/;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
-
-        location /api/users/ {
-            proxy_pass         http://auth/users/;
+            proxy_pass         http://auth/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
